--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 #theme: jekyll-theme-slate
 remote_theme: mmistakes/so-simple-theme
+locale: en-US
 title: "Matt's Monty Python Repository"
 description: "Home of Monty Python transcripts"
 url: "https://zaskem.github.io/montypython-repository"
@@ -10,6 +11,15 @@ twitter:
 read_time: true
 words_per_minute: 200
 
+# Collections
+collections:
+  sketches:
+    output: true
+    permalink: /:collection/:path/
+  holygrail:
+    output: true
+    permalink: /:collection/:path/
+    
 # Taxonomy pages
 category_archive_path: "/categories/#"
 tag_archive_path: "/tags/#"
