--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 #theme: jekyll-theme-slate
-remote_theme: mmistakes/so-simple-theme
+remote_theme: "mmistakes/so-simple-theme@3.2.0"
 locale: en-US
+skin: "/assets/css/skins/dark.css"
 title: "Matt's Monty Python Repository"
 description: "Home of Monty Python transcripts"
 url: "https://zaskem.github.io/montypython-repository"
