First cut at holy grail film pages.

--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,7 @@ collections:
   holygrail:
     output: true
     permalink: /:collection/:path/
+    sort_by: filmorder
     
 # Taxonomy pages
 category_archive_path: "/categories#"
