--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,5 +4,5 @@
   url: /
 - title: Sketches
   url: /sketches/
-# - title: The Holy Grail
-#   url: /holygrail/
+- title: The Holy Grail
+  url: /holygrail/
